rust/message-backup/tests/res/test-cases/valid-encrypted/new-account.binproto.encrypted.source.jsonproto
[
    {
        "backupTimeMs": "1705692409729",
        "version": "1"
    },
    {
        "recipient": {
        "id": "2",
        "self": {}
        }
    },
    {
        "chat": {
        "id": "1",
        "recipientId": "2"
        }
    }
]