rust/message-backup/tests/res/test-cases/invalid/group-update-invalid-aci.jsonproto
[
  {
    "version": "1",
    "backupTimeMs": "1705692409729",
    "mediaRootBackupKey": "q6urq6urq6urq6urq6urq6urq6urq6urq6urq6urq6s=",
  },
  {
    "recipient": {
      "id": "1",
      "self": {}
    }
  },
  {
    "recipient": {
      "id": "2",
      "group": {
        "masterKey": "YWFhYWFhYWFhYWFhYWFhYWFhYWFhYWFhYWFhYWFhYWE=",
        "snapshot": {}
      }
    }
  },
  {
    "chat": {
      "id": "1",
      "recipientId": "2"
    }
  },
  {
    "chatItem": {
      "chatId": "1",
      "authorId": "1",
      "dateSent": 12345,
      "directionless": {},
      "updateMessage": {
        "groupChange": {
          "updates": [
            {
              "selfInvitedToGroupUpdate": {
                "inviterAci": "YmJiYmJiYmJiYmJiYmIK"
              }
            }
          ]
        }
      }
    }
  }
]